--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </script>
 
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-3041721-6']);
       _gaq.push(['_trackPageview']);
@@ -106,7 +106,7 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-    </script>
+    </script> -->
   </head>
   <body>
 
